--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -20,3 +20,23 @@
 .ListItem:active {
     background-color: #ccc;
 }
+
+.fade-enter {
+    opacity: 0;
+    transform: translateX(-100%);
+}
+.fade-enter-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: all .3s ease-out;
+}
+
+.fade-exit {
+    opacity: 1;
+    transform: translateX(0);
+}
+.fade-exit-active {
+    opacity: 0;
+    transform: translateX(100%);
+    transition: all .3s ease-out;
+}
